# quickstatements3

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  uwsgi.ini
.github/workflows/: ci.yml  toolforge-deploy.yml
etc/: env  env.SAMPLE  nginx.conf
quickstatements/apps/api/: apps.py
quickstatements/apps/core/: admin.py  apps.py  client.py  exceptions.py  models.py  serializers.py  urls.py  views.py
quickstatements/apps/web/: admin.py  apps.py  languages.py  middleware.py  utils.py
quickstatements/service/: settings.py  urls.py
src/: app.ini  app.py  manage.py  qsdev.cnf  requirements.txt
src/api/: client.py  commands.py  exceptions.py  paginators.py  serializers.py  tests.py  urls.py  views.py
src/api/tests/: test_batch_command_detail_view.py  test_batch_command_list_view.py  test_batch_detail_view.py  test_batch_list_view.py
src/core/: admin.py  client.py  commands.py  exceptions.py  models.py  tests.py
src/core/migrations/: 0001_initial.py  0002_delete_batchadmin_delete_batchcommandadmin_and_more.py  0003_alter_batch_created_alter_batch_modified_and_more.py  0004_alter_batch_message.py  0005_batchcommand_raw_alter_batchcommand_message_and_more.py  0006_batchcommand_action.py  0007_alter_batch_modified_and_more.py  0009_batchcommand_response_json.py  (+15 more)
src/integration/: tests.py
src/qsts3/: asgi.py  settings.py  urls.py  wsgi.py
src/web/: middleware.py  models.py  oauth.py  tests.py  urls.py  utils.py  views.py
src/web/views/: auth.py  (+4 more)
(+92 files in other folders)
